nodejs/mynode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynode-app
  namespace: nodejs
spec:
  selector:
    app: mynode-app
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
